--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,13 +1,24 @@
 html {
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   font-family: sans-serif;
-  background-color: black;
+}
+
+#size {
+  visibility:hidden;
+  position: fixed;
+  right: 0;
+  bottom: 0;
 }
 
 .page {
   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='34' height='34' fill-opacity='0.5'><circle cx='16' cy='16' r='14' stroke='white' stroke-opacity='0.4' stroke-width='3'/></svg>"), pointer;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
