--- a/app/core/main.css
+++ b/app/core/main.css
@@ -2,6 +2,7 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   font-family: sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 body { margin: 0 }
 .page { cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='34' height='34' fill-opacity='0.5'><circle cx='16' cy='16' r='14' stroke='white' stroke-opacity='0.4' stroke-width='3'/></svg>"), pointer }
