--- a/app/core/main.css
+++ b/app/core/main.css
@@ -3,9 +3,21 @@ html {
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
+.ui {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
 body { margin: 0 }
 .page {
   -webkit-tap-highlight-color: transparent;
   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='34' height='34' fill-opacity='0.5'><circle cx='16' cy='16' r='14' stroke='white' stroke-opacity='0.4' stroke-width='3'/></svg>"), pointer
 }
+
 * { box-sizing: inherit }
